--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Joris Kraak's Git Achievements <img src='http://www.gravatar.com/avatar/e8419ba6a2d78def12cf72b445df988f'/></h2>
-Unlocked 20/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 238 points<br>
+Unlocked 21/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 239 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -56,6 +56,7 @@ Unlocked 20/51 <a href="http://github.com/bauglir/git-achievements">Git Achievem
 <li><div class="title">Baptised</div>  <div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Blacksmith (Level 4)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
+<li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Goldsmith (Level 4)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Goldsmith (Level 5)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Goldsmith (Level 6)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
@@ -78,15 +79,15 @@ Unlocked 20/51 <a href="http://github.com/bauglir/git-achievements">Git Achievem
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   4975 status
-   4212 symbolic-ref
+   4980 status
+   4216 symbolic-ref
     301 add
     261 diff
     250 commit
-    141 checkout
+    143 checkout
      56 svn
      53 mv
-     41 branch
+     43 branch
      29 stash
      28 rm
      27 push
@@ -109,6 +110,7 @@ Git commands sorted by usage:
       1 submodule
       1 Mon
       1 gc
+      1 cherry-pick
       1 blame
 </pre>
 <script type="text/javascript">
@@ -128,7 +130,6 @@ There are 51 Achievements. Some achievements can be leveled up depending on the 
 <li><div class="title">Carpenter</div><div class="info">Custom <a href="http://www.kernel.org/pub/software/scm/git/docs/githooks.html">git-hooks</a> are installed which help catch issues before they are shared.</div></li>
 <li><div class="title">Cathedral Architect</div><div class="info">Added a submodule to a repository.</div></li>
 <li><div class="title">Cathedral Worker</div><div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
-<li><div class="title">Cherry Picker</div><div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Chimney Sweeper</div><div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Cleaning lady</div><div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Delivery Boy</div><div class="info">Move objects and refs by archive with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bundle.html">git-bundle</a>.</div></li>
