--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Joris Kraak's Git Achievements <img src='http://www.gravatar.com/avatar/e8419ba6a2d78def12cf72b445df988f'/></h2>
-Unlocked 22/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 241 points<br>
+Unlocked 22/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 248 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -76,17 +76,18 @@ Unlocked 22/51 <a href="http://github.com/bauglir/git-achievements">Git Achievem
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 <li><div class="title">Traveler (Level 4)</div>  <div class="info">Streamed changes between another rcs with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-svn.html">git-svn</a> or <a href="http://www.kernel.org/pub/software/scm/git/docs/git-p4.html">git-p4</a>.</div></li>
 <li><div class="title">Traveler (Level 5)</div>  <div class="info">Streamed changes between another rcs with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-svn.html">git-svn</a> or <a href="http://www.kernel.org/pub/software/scm/git/docs/git-p4.html">git-p4</a>.</div></li>
+<li><div class="title">Traveler (Level 6)</div>  <div class="info">Streamed changes between another rcs with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-svn.html">git-svn</a> or <a href="http://www.kernel.org/pub/software/scm/git/docs/git-p4.html">git-p4</a>.</div></li>
 <li><div class="title">Weaver</div>  <div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a></div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   5305 status
-   4465 symbolic-ref
-    326 add
-    283 diff
-    267 commit
-    152 checkout
-     62 svn
+   5335 status
+   4487 symbolic-ref
+    327 add
+    285 diff
+    268 commit
+    155 checkout
+     64 svn
      62 mv
      50 branch
      31 stash
