--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Joris Kraak's Git Achievements <img src='http://www.gravatar.com/avatar/e8419ba6a2d78def12cf72b445df988f'/></h2>
-Unlocked 22/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 265 points<br>
+Unlocked 22/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 273 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -66,6 +66,7 @@ Unlocked 22/51 <a href="http://github.com/bauglir/git-achievements">Git Achievem
 <li><div class="title">Librarian</div>  <div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
 <li><div class="title">Master Author (Level 7)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Author (Level 8)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Master Goldsmith (Level 7)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 8)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Miller (Level 4)</div>  <div class="info">Add only part of a file to the stage 296 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
@@ -84,29 +85,29 @@ Unlocked 22/51 <a href="http://github.com/bauglir/git-achievements">Git Achievem
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   5508 status
-   4636 symbolic-ref
-    339 add
-    295 diff
-    278 commit
-    160 checkout
-     64 svn
+   5850 status
+   4921 symbolic-ref
+    363 add
+    315 diff
+    290 commit
+    176 checkout
+     73 svn
+     63 branch
      62 mv
-     51 branch
-     37 push
-     34 stash
-     32 rebase
-     31 rm
-     20 reset
-     14 fetch
-     13 log
-     12 help
+     42 push
+     41 stash
+     38 rebase
+     32 rm
+     23 reset
+     20 fetch
+     16 log
+     13 help
      11 achievements
       8 tag
       7 remote
       7 reflog
+      7 clone
       6 merge
-      6 clone
       4 config
       3 Wed
       2 Thu
